--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
   <div class="main-div">
   	  <h2>Hello I am <span>Tanmoy Dhar</span></h2>
+  	  <h2>Hello I am <span>Rana</span></h2>
   </div>
 </body>
 </html>
